# better-resource-monitor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SITEMAP_STRATEGY.md  package-lock.json  package.json  pnpm-lock.yaml  simplify-progress.txt  test-coverage-progress.txt
.claude/skills/generate-banner/: SKILL.md
.github/workflows/: release.yml
scripts/: .env.example  package-for-store.sh  screenshot-helper.sh
src/: index.html  main.js
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: render_tray_icon.rs
src-tauri/icons/: icon.icns
src-tauri/src/: align icon text,  gpu.rs  lib.rs  main.rs  tests.rs  tray_render.rs
www/: README.md  SITEMAP_STRATEGY.md  astro.config.mjs  generate-badges.mjs  package-lock.json  package.json  wrangler.jsonc
www/public/: _headers  robots.txt  site.webmanifest
www/src/: content.config.ts
www/src/components/: ComparisonSchema.astro  ComparisonTable.astro  Hero.astro  ResourceCalculator.jsx
www/src/content/legal/: privacy-policy.md  terms.md
www/src/layouts/: Layout.astro
www/src/lib/: og.ts
www/src/pages/: 404.astro  calculator.astro  contributing.astro  faq.astro  index.astro  og.png.ts  privacy-policy.astro  terms.astro  vs-eul.astro  vs-istat-menus.astro  vs-stats.astro
www/src/pages/images/: [id].png.ts
www/src/pages/screenshots/: [id].png.ts
www/src/styles/: hero.css  theme.css  tokens.css
