[package]
name = "silicon-resources-monitor"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sillicon_resources_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"
sysinfo = "0.37.2"
image = "0.24"
rusttype = "0.9"
tray-icon = "0.21"
font-kit = "0.13"
resvg = "0.44"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.10"


