[package]
name = "better-resource-monitor"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "better-resource-monitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "better_resource_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "better-resource-monitor"
path = "src/main.rs"



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
# Only included in debug builds via conditional compilation
tauri-plugin-log = { version = "2", optional = true }
log = "0.4"
serde_json = "1"
sysinfo = "0.37.2"
image = "0.24"
rusttype = "0.9"
tray-icon = "0.21"
font-kit = "0.13"
resvg = "0.44"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSAppearance"] }
objc2-foundation = "0.3"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.10"

[dev-dependencies]

[features]
default = []
dev-logging = ["tauri-plugin-log"]


